Widen the cards for improved code readability and fix formatting on a question

--- a/src/public/example.css
+++ b/src/public/example.css
@@ -10,7 +10,7 @@ body {
 }
 
 .flashcard {
-  max-width: 380px;
+  max-width: 600px;
   margin: 0 auto;
   color: #292929;
 }
